Fixed spacing in handlingsknapp with and without icon

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -278,6 +278,16 @@
     background: $blue-light;
     border: 2px dotted $blue;
   }
+
+  &:not(.a-fullWidthBtn) {
+    span {
+      margin-left: $spacer;
+    }
+
+    i + span {
+      margin-left: 0;
+    }
+  }
 }
 
 // BOX BUTTON
